--- a/app/src/main/res/menu/main_fragment.xml
+++ b/app/src/main/res/menu/main_fragment.xml
@@ -1,10 +1,3 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<menu xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.main.MainActivity">
-    <item
-        android:id="@+id/action_refresh"
-        android:orderInCategory="100"
-        android:title="@string/action_refresh_list"
-        app:showAsAction="never" />
 </menu>
